--- a/views/layout.njk
+++ b/views/layout.njk
@@ -8,7 +8,7 @@
         <title>RPG</title>
     {% endblock %}
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="https://thumbnail.imgbin.com/23/17/4/imgbin-minato-namikaze-rasengan-goku-naruto-uzumaki-goku-KymRjeh2XZ4FPeP5e7bXdZ8CT_t.jpg" type="img/x-icon">
+    <link rel="icon" href="https://image.flaticon.com/icons/png/512/297/297806.png" type="img/x-icon">
 </head>
 <body>
     <header>
